TAG: lib_py_littriage-6-0-25-1
DATE: 12/23/2024
STAFF: lec
wts2-1594/e4g-106/DoiFinder/j.isci issue
#       modified:   PdfParser.py
while testing Lit Triage, found a j.isci issue; added this:
class DoiFinder: text = text.replace(' j.isci', 'j.isci')

TAG: lib_py_littriage-6-0-24-2
TAG: lib_py_littriage-6-0-24-1
DATE: 10/23/2024
STAFF: lec
wts2-1565/e4g-39/GXD HT: Missing PMIDs
#       modified:   PubMedAgent.py

TAG: lib_py_littriage-6-0-23-2
TAG: lib_py_littriage-6-0-23-1
DATE: 02/06/2024
STAFF: lec
wts2-1397/fl2-731/Migration to Rocky OS/backend/data loads

TAG: lib_py_littriage-6-0-22-11
DATE: 02/22/2023
STAFF: lec
wts2-1127/fl2-225/LitTriage/EUtils issue
PubMedAgent.py/getPubMedIDs(); re-organize try/except

TAG: lib_py_littriage-6-0-22-10
TAG: lib_py_littriage-6-0-22-9
DATE: 12/14/2022, 12/15/2022
STAFF: lec
wts2-1073/Titles come in from pubmed that say 'dagger'
PubMedAgent.py : replace "dagger" with ""

TAG: lib_py_littriage-6-0-22-8
DATE: 12/13/2022
STAFF: lec
wts2-1072/Lit Triage load:  Abstract issue

TAG: lib_py_littriage-6-0-22-7
TAG: lib_py_littriage-6-0-22-6
TAG: lib_py_littriage-6-0-22-5
TAG: lib_py_littriage-6-0-22-4
TAG: lib_py_littriage-6-0-22-3
TAG: lib_py_littriage-6-0-22-2
TAG: lib_py_littriage-6-0-22-1
DATE: 11/25/2022, 11/29/2022, 12/09/2022
STAFF: lec
wts2-550/TR13423 - ltlo: NLM-refresh not updating abstract
non-ascii/authors, title, abstract

TAG: lib_py_littriage-6-0-18-1
DATE: 02/09/2022
STAFF: lec
wts2-599/PNAS journal no longer has page numbers in PubMed/PG tag
added 'eLocator' to PubMedAgent.py

TAG: lib_py_littriage-6-0-16-8
TAG: lib_py_littriage-6-0-16-7
DATE: 11/23/2021, 11/24/2021
STAFF: jak, lec
handle null extracted text in ExtractedTextSet.py
YAKS-380
chmod +x ExtractedTextSet.py PdfParser.py

TAG: lib_py_littriage-6-0-16-3
DATE: 08/24/2020
STAFF: jak
improve stderr capture from LITPARSER

TAG: lib_py_littriage-6-0-16-2
DATE: 08/21/2020
STAFF: jak
add test/getTextFromPdf.py

TAG: lib_py_littriage-6-0-16-1
DATE: 08/21/2020